# frog

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  kurtosis-ci.yaml  rust-ci.yaml  rust-clippy.yaml
crates/adapter/: Cargo.toml
crates/adapter/src/: lib.rs
crates/adapter/src/http/: game.rs  mod.rs  peer.rs  session.rs
crates/adapter/src/in_memory/: game.rs  game_player.rs  mod.rs  session.rs  state.rs
crates/adapter/src/postgres/: mod.rs  schema.rs  session_db.rs
crates/adapter/src/postgres/migrations/2024-12-09-100430_enable_extentions/: up.sql
crates/adapter/src/postgres/migrations/2024-12-10-023407_create_sessions/: down.sql  up.sql
crates/adapter/src/postgres/models/: session.rs
crates/adapter/src/worker/: mod.rs
crates/client/: Cargo.toml
crates/client/config/: 00-default.toml  01-client-01.toml
crates/client/src/: app_state.rs  errors.rs  lib.rs  main.rs  options.rs  routes.rs
crates/client/src/controllers/: game.rs  session.rs
crates/client/src/services/: game.rs  session.rs
crates/common/: Cargo.toml
crates/common/src/loggers/: telemetry.rs
crates/common/src/workers/: dummy_worker.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs
crates/core/src/entities/: client.rs  game.rs  game_player.rs  mod.rs  player.rs  session.rs
crates/core/src/ports/: game.rs  game_client.rs  game_player.rs  mod.rs  peer.rs  session.rs  session_client.rs  worker.rs
crates/phantom/: Cargo.toml
crates/phantom/src/: client.rs  crs.rs  lib.rs  native_ops.rs  ops.rs  param.rs  prime_ops.rs  server.rs  utils.rs
crates/server/: Cargo.toml  build.rs
crates/server/config/: 00-default.toml
crates/server/src/: app_state.rs  errors.rs  lib.rs  main.rs  options.rs  routes.rs
crates/server/src/controllers/: dummy_job.rs  game.rs  mod.rs  session.rs
crates/server/src/services/: game.rs  game_player.rs  mod.rs  session.rs
crates/worker/: Cargo.toml
crates/worker/config/: 00-default.toml
crates/worker/src/: app_state.rs  errors.rs  lib.rs  main.rs  options.rs
crates/worker/src/dummy_worker/: mod.rs
crates/worker/src/services/: session.rs
crates/worker/src/workers/: bs_key_shares.rs  compute_function.rs  mod.rs
docs/: architecture.md  how_to_run.md
e2e-tests/: Cargo.toml  tests.rs
e2e-tests/src/: postgres.rs  program.rs
kurtosis/: client.star  databases.star  input_parser.star  kurtosis.yml  main.star  params.yaml  server.star  worker.star
kurtosis/additional_services/: jaeger.star  quickwit.star
kurtosis/lib/: client.star  server.star  worker.star
kurtosis/templates/: 01-client.toml  01-server.toml  01-worker.toml  init-db.sql
taplo/: taplo.toml
