[workspace]
resolver = "2"

members = ["crates/common", "crates/client", "crates/server", "crates/worker"]

[workspace.dependencies]
common = { path = "crates/common" }

axum = { version = "0.8.0-alpha.1" }
clap = { version = "4.5.17" }
config = { version = "0.14.0" }
glob = { version = "0.3.1" }
graphile_worker = { version = "0.8.0" }
opentelemetry = { version = "0.26.0" }
opentelemetry-otlp = { version = "0.26.0" }
opentelemetry-semantic-conventions = { version = "0.26.0" }
opentelemetry_sdk = { version = "0.26.0" }
prost = { version = "0.13.2" }
readonly = { version = "0.2.12" }
serde = { version = "1.0.210" }
serde_json = { version = "1.0.132" }
sqlx = { version = "*" }
thiserror = { version = "1.0.65" }
tokio = { version = "1.39.3" }
tonic = { version = "0.12.2" }
tower-http = { version = "0.6.1" }
tracing = { version = "0.1.40" }
tracing-bunyan-formatter = { version = "0.3.9" }
tracing-opentelemetry = { version = "0.27.0" }
tracing-subscriber = { version = "0.3.18" }
