[package]
name = "frog_adapter"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
deadpool-diesel = { workspace = true, features = ["postgres", "serde"] }
diesel = { workspace = true, features = [
  "postgres",
  "postgres_backend",
  "uuid",
  "serde_json",
] }
diesel_migrations = { workspace = true }
frog_common = { workspace = true }
frog_core = { workspace = true }
graphile_worker = { workspace = true }
log = { workspace = true }
opentelemetry = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
  "chrono",
  "postgres",
  "json",
  "macros",
  "runtime-tokio",
] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
