[package]
name = "frog_core"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
phantom = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
