[package]
name = "frog_worker"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
common = { workspace = true }
graphile_worker = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
readonly = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
  "chrono",
  "postgres",
  "json",
  "macros",
  "runtime-tokio",
] }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["timeout", "trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
